# gemini-rs

./: .clinerules  .env.example  .gitignore  .windsurfrules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  GITHUB_RELEASE_v0.4.0.md  GITHUB_RELEASE_v0.5.0.md  LICENSE  README.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  SECURITY.md  justfile  plan.md
apps/adk-api-server/: Cargo.toml  README.md
apps/adk-api-server/src/: handlers.rs  main.rs
apps/adk-server-core/: Cargo.toml  README.md
apps/adk-server-core/src/: agents.rs  handlers.rs  lib.rs  sessions.rs  types.rs
apps/adk-web/: Cargo.toml  README.md
apps/adk-web/src/: api.rs  app.rs  bridge.rs  main.rs  span_layer.rs  ws_handler.rs
apps/adk-web/src/apps/: all_config.rs  call_screening.rs  clinic.rs  debt_collection.rs  extractors.rs  guardrails.rs  mod.rs  playbook.rs  (+5 more)
apps/adk-web/static/: app.html  index.html
apps/gemini-adk-api/: Cargo.toml  README.md
apps/gemini-adk-api-rs/: Cargo.toml  README.md
apps/gemini-adk-api-rs/src/: main.rs
apps/gemini-adk-api/src/: main.rs
apps/gemini-adk-server/: Cargo.toml  README.md
apps/gemini-adk-server/src/: agents.rs  handlers.rs  lib.rs  sessions.rs
apps/gemini-adk-web/: Cargo.toml  README.md
apps/gemini-adk-web-rs/: Cargo.toml  README.md
apps/gemini-adk-web-rs/src/: api.rs  bridge.rs  main.rs  span_layer.rs
apps/gemini-adk-web/src/: api.rs  bridge.rs  main.rs  span_layer.rs
cookbooks/agents/: Cargo.toml
cookbooks/agents/src/: research_pipeline.rs  weather_agent.rs
cookbooks/text-chat/: Cargo.toml
cookbooks/text-chat/src/: main.rs
cookbooks/ui/: Cargo.toml  README.md
cookbooks/ui/src/: app.rs  bridge.rs  main.rs  span_layer.rs  ws_handler.rs
cookbooks/ui/static/: app.html  app.js  index.html  style.css
crates/adk-rs-fluent/: Cargo.toml  README.md
crates/adk-rs-fluent/examples/: fluent_pipeline.rs
crates/adk-rs-fluent/src/: a2a.rs  builder.rs  lib.rs  live.rs  live_builders.rs  operators.rs  patterns.rs  testing.rs
crates/adk-rs-fluent/tests/: integration.rs
crates/gemini-adk/: Cargo.toml  README.md
crates/gemini-adk-fluent/: Cargo.toml  README.md
crates/gemini-adk-fluent-rs/: Cargo.toml  README.md
crates/gemini-adk-fluent-rs/examples/: fluent_pipeline.rs
crates/gemini-adk-fluent-rs/src/: builder.rs  lib.rs  live_builders.rs  operators.rs  patterns.rs  testing.rs
crates/gemini-adk-fluent-rs/tests/: integration.rs
crates/gemini-adk-fluent/examples/: fluent_pipeline.rs
crates/gemini-adk-fluent/src/: builder.rs  lib.rs  live_builders.rs  operators.rs  patterns.rs  testing.rs
crates/gemini-adk-fluent/tests/: integration.rs
crates/gemini-adk-rs/: Cargo.toml  README.md
crates/gemini-adk-rs/examples/: runtime_agent.rs
crates/gemini-adk-rs/src/: agent.rs  agent_config.rs  agent_session.rs  agent_tool.rs  callback.rs  context.rs  error.rs  lib.rs  llm_agent.rs  runner.rs  test_helpers.rs
crates/gemini-adk-rs/tests/: integration.rs
crates/gemini-adk/examples/: runtime_agent.rs
crates/gemini-adk/src/: agent.rs  agent_config.rs  agent_session.rs  agent_tool.rs  callback.rs  context.rs  error.rs  lib.rs  llm_agent.rs  router.rs  runner.rs  state.rs  test_helpers.rs  text_runner.rs
crates/gemini-adk/tests/: integration.rs
crates/gemini-live/: Cargo.toml  README.md
crates/gemini-live-runtime/: Cargo.toml
crates/gemini-live-runtime/examples/: runtime_agent.rs
crates/gemini-live-runtime/src/: agent.rs  agent_session.rs  agent_tool.rs  context.rs  error.rs  lib.rs  llm_agent.rs  middleware.rs  runner.rs  tool.rs
crates/gemini-live-runtime/tests/: integration.rs
crates/gemini-live-wire/: Cargo.toml
crates/gemini-live-wire/benches/: audio_pipeline.rs
crates/gemini-live-wire/examples/: wire_raw_session.rs
crates/gemini-live-wire/src/: lib.rs  quick.rs
crates/gemini-live-wire/tests/: mock_session.rs  prelude_exports.rs
crates/gemini-live/benches/: audio_pipeline.rs
crates/gemini-live/examples/: fluent_pipeline.rs  wire_raw_session.rs
crates/gemini-live/src/: builder.rs  lib.rs  operators.rs  patterns.rs  quick.rs
crates/gemini-live/tests/: mock_session.rs  prelude_exports.rs
crates/rs-adk/: Cargo.toml  README.md
crates/rs-adk/examples/: runtime_agent.rs
crates/rs-adk/src/: agent.rs  agent_config.rs  agent_session.rs  agent_tool.rs  callback.rs  confirmation.rs  context.rs  credentials.rs  error.rs  instruction.rs  lib.rs  llm_agent.rs  middleware.rs  router.rs  run_config.rs  runner.rs  state.rs  test_helpers.rs  text.rs  text_agent_tool.rs  text_runner.rs  tool.rs  toolset.rs
crates/rs-adk/tests/: integration.rs
crates/rs-genai/: Cargo.toml  README.md
crates/rs-genai/benches/: audio_pipeline.rs
crates/rs-genai/examples/: wire_raw_session.rs
crates/rs-genai/src/: lib.rs  quick.rs
crates/rs-genai/tests/: mock_session.rs  prelude_exports.rs
examples/agents/: Cargo.toml  README.md
examples/agents/src/: research_pipeline.rs  weather_agent.rs
examples/cookbook/: Cargo.toml  README.md
examples/cookbook/src/: 01_simple_agent.rs  02_agent_with_tools.rs  03_callbacks.rs  04_sequential_pipeline.rs  05_parallel_fanout.rs  06_loop_agent.rs  07_state_transforms.rs  08_prompt_composition.rs  09_tool_composition.rs  10_guards.rs  11_route_branching.rs  12_fallback_chain.rs  13_review_loop.rs  14_map_over.rs  15_middleware_stack.rs  16_context_engineering.rs  17_evaluation_suite.rs  18_artifacts.rs  19_agent_tool.rs  20_supervised.rs  21_full_algebra.rs  22_contract_testing.rs  23_deep_research.rs  24_customer_support.rs  25_code_review.rs  26_dispatch_join.rs  27_race_timeout.rs  28_a2a_remote.rs  29_live_voice.rs  30_production_pipeline.rs
examples/text-chat/: Cargo.toml  README.md
examples/text-chat/src/: main.rs
examples/tool-calling/: Cargo.toml  README.md
examples/tool-calling/src/: main.rs
tools/adk-cli/: Cargo.toml  README.md
tools/adk-cli/src/: main.rs  manifest.rs
tools/adk-transpiler/: Cargo.toml
tools/adk-transpiler/src/: codegen.rs  diff.rs  genai_reader.rs  main.rs  reader.rs  schema.rs
tools/gemini-adk-cli-rs/: Cargo.toml  README.md
(+692 files in other folders)
