[workspace]
resolver = "2"
members = [
    "crates/gemini-live",
    "crates/gemini-adk",
    "crates/gemini-adk-fluent",
    "apps/gemini-adk-server",
    "apps/gemini-adk-web",
    "apps/gemini-adk-api",
    "examples/agents",
    "examples/text-chat",
    "examples/voice-chat",
    "examples/tool-calling",
    "examples/transcription",
    "examples/cookbook",
    "tools/gemini-adk-transpiler",
    "tools/gemini-adk-cli",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vamsiramakrishnan/gemini-rs"

# Internal workspace crates — version mirrors [workspace.package].version above.
# Update ONLY [workspace.package].version when releasing; release.sh handles the rest.
[workspace.dependencies]
gemini-live       = { path = "crates/gemini-live",       version = "0.5.0" }
gemini-adk        = { path = "crates/gemini-adk",        version = "0.5.0" }
gemini-adk-fluent = { path = "crates/gemini-adk-fluent", version = "0.5.0" }
gemini-adk-server = { path = "apps/gemini-adk-server",   version = "0.5.0" }

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
field_reassign_with_default = "allow"
new_ret_no_self = "allow"
await_holding_lock = "allow"
