[workspace]
resolver = "2"
members = [
    "crates/gemini-genai-rs",
    "crates/gemini-adk-rs",
    "crates/gemini-adk-fluent-rs",
    "apps/gemini-adk-server-rs",
    "apps/gemini-adk-web-rs",
    "apps/gemini-adk-api-rs",
    "examples/agents",
    "examples/text-chat",
    "examples/voice-chat",
    "examples/tool-calling",
    "examples/transcription",
    "examples/cookbook",
    "tools/gemini-adk-transpiler-rs",
    "tools/gemini-adk-cli-rs",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vamsiramakrishnan/gemini-rs"

# Internal workspace crates — version mirrors [workspace.package].version above.
# Update ONLY [workspace.package].version when releasing; release.sh handles the rest.
[workspace.dependencies]
gemini-genai-rs      = { path = "crates/gemini-genai-rs",      version = "0.5.0" }
gemini-adk-rs        = { path = "crates/gemini-adk-rs",        version = "0.5.0" }
gemini-adk-fluent-rs = { path = "crates/gemini-adk-fluent-rs", version = "0.5.0" }
gemini-adk-server-rs = { path = "apps/gemini-adk-server-rs",   version = "0.5.0" }

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
field_reassign_with_default = "allow"
new_ret_no_self = "allow"
await_holding_lock = "allow"
