[package]
name = "adk-api-server"
version.workspace = true
edition.workspace = true
publish = false
description = "Standalone REST API server for ADK agents — mirrors upstream `adk api_server`"

[[bin]]
name = "adk-api-server"
path = "src/main.rs"

[dependencies]
adk-server-core = { path = "../adk-server-core" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[lints]
workspace = true
