[package]
name = "adk-server-core"
version = "0.5.0"
edition.workspace = true
publish = false
description = "Shared server core for adk-web, adk-api-server, and adk-cli — agent loading, REST handlers, session management"

[dependencies]
rs-adk = { path = "../../crates/rs-adk", features = ["gemini-llm"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
async-trait = "0.1"

[lints]
workspace = true
