[package]
name = "gemini-adk-web-rs"
version.workspace = true
description = "Interactive web UI for Gemini ADK agent development and debugging"
edition.workspace = true
publish = false

[dependencies]
gemini-genai-rs       = { workspace = true }
gemini-adk-rs        = { workspace = true, features = ["gemini-llm"] }
gemini-adk-fluent-rs = { workspace = true, features = ["gemini-llm"] }
gemini-adk-server-rs = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
futures = "0.3"
tokio-stream = "0.1"
dotenvy = "0.15"
base64 = "0.22"
async-trait = "0.1"
thiserror = "2"
regex = "1"
parking_lot = "0.12"
schemars = "0.8"
tracing-subscriber = { version = "0.3", features = ["registry"] }

[features]
default = []
otel = ["gemini-genai-rs/otel", "gemini-adk-rs/otel"]
otel-otlp = ["gemini-genai-rs/otel-otlp", "gemini-adk-rs/otel-otlp"]
otel-gcp = ["gemini-genai-rs/otel-gcp", "gemini-adk-rs/otel-gcp"]

[lints]
workspace = true
