[package]
name = "cookbook-text-chat"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
gemini-live-wire = { path = "../../crates/gemini-live-wire" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
dotenvy = "0.15"
base64 = "0.22"
