[package]
name = "rs-genai-ui"
version = "0.1.0"
edition.workspace = true

[dependencies]
rs-genai = { path = "../../crates/rs-genai" }
rs-adk = { path = "../../crates/rs-adk" }
adk-rs-fluent = { path = "../../crates/adk-rs-fluent" }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio-stream = "0.1"
dotenvy = "0.15"
base64 = "0.22"
async-trait = "0.1"
thiserror = "2"
regex = "1"
parking_lot = "0.12"
