[package]
name = "rs-genai-ui"
version = "0.1.0"
edition.workspace = true

[dependencies]
rs-genai = { path = "../../crates/rs-genai" }
rs-adk = { path = "../../crates/rs-adk", features = ["gemini-llm"] }
adk-rs-fluent = { path = "../../crates/adk-rs-fluent", features = ["gemini-llm"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
futures = "0.3"
tokio-stream = "0.1"
dotenvy = "0.15"
base64 = "0.22"
async-trait = "0.1"
thiserror = "2"
regex = "1"
parking_lot = "0.12"
schemars = "0.8"

[features]
default = []
otel = ["rs-genai/otel", "rs-adk/otel"]
otel-otlp = ["rs-genai/otel-otlp", "rs-adk/otel-otlp"]
otel-gcp = ["rs-genai/otel-gcp", "rs-adk/otel-gcp"]
