[package]
name = "adk-rs-fluent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Fluent DX for Gemini Live — builder API, operator algebra, composition modules"
keywords = ["gemini", "agents", "fluent", "builder", "composition"]
categories = ["api-bindings", "asynchronous", "development-tools"]
repository.workspace = true
documentation = "https://docs.rs/adk-rs-fluent"
readme = "README.md"

[dependencies]
rs-genai = { path = "../rs-genai" }
rs-adk = { path = "../rs-adk" }
bytes = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
gemini-llm = ["rs-adk/gemini-llm"]
