[package]
name = "adk-rs-fluent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fluent DX for Gemini Live — builder API, operator algebra, composition modules"
keywords = ["gemini", "agents", "fluent", "builder", "composition"]
categories = ["api-bindings", "asynchronous", "development-tools"]
repository.workspace = true
documentation = "https://docs.rs/adk-rs-fluent"
readme = "README.md"

[dependencies]
rs-genai = { workspace = true }
rs-adk   = { workspace = true }
bytes = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
gemini-llm = ["rs-adk/gemini-llm"]
tracing-support = ["rs-adk/tracing-support"]
otel = ["rs-adk/otel", "rs-genai/otel"]
otel-otlp = ["rs-adk/otel-otlp", "rs-genai/otel-otlp"]
otel-gcp = ["rs-adk/otel-gcp", "rs-genai/otel-gcp"]

[lints]
workspace = true
