[package]
name = "gemini-adk-fluent-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fluent DX for Gemini Live — builder API, operator algebra, composition modules"
keywords = ["gemini", "agents", "fluent", "builder", "composition"]
categories = ["api-bindings", "asynchronous", "development-tools"]
repository.workspace = true
documentation = "https://docs.rs/gemini-adk-fluent-rs"
readme = "README.md"

[dependencies]
gemini-genai-rs = { workspace = true }
gemini-adk-rs  = { workspace = true }
bytes = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
gemini-llm = ["gemini-adk-rs/gemini-llm"]
tracing-support = ["gemini-adk-rs/tracing-support"]
otel = ["gemini-adk-rs/otel", "gemini-genai-rs/otel"]
otel-otlp = ["gemini-adk-rs/otel-otlp", "gemini-genai-rs/otel-otlp"]
otel-gcp = ["gemini-adk-rs/otel-gcp", "gemini-genai-rs/otel-gcp"]

[lints]
workspace = true
