[package]
name = "gemini-live-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Agent runtime for Gemini Live — tools, streaming, agent transfer, middleware"

[dependencies]
gemini-live-wire = { path = "../gemini-live-wire" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dashmap = "6"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
tracing-support = ["dep:tracing", "gemini-live-wire/tracing-support"]
