[package]
name = "gemini-live-wire"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Raw wire protocol and transport for the Gemini Multimodal Live API"
keywords = ["gemini", "multimodal", "live", "audio", "realtime"]
categories = ["api-bindings", "multimedia::audio", "network-programming"]

[features]
default = ["vad", "tracing-support"]
vad = []
opus = ["dep:audiopus"]
tracing-support = ["dep:tracing", "dep:tracing-subscriber"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Error handling
thiserror = "2"

# Identifiers
uuid = { version = "1", features = ["v4"] }

# Byte manipulation
bytes = "1"

# Concurrency
parking_lot = "0.12"
dashmap = "6"
arc-swap = "1"

# URL parsing
url = "2"

# Audio (optional)
audiopus = { version = "0.3.0-rc.0", optional = true }

# Tracing (optional)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }

# Metrics (optional)
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tokio-test = "0.4"
