[package]
name = "rs-adk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Agent runtime for Gemini Live — tools, streaming, agent transfer, middleware"

[dependencies]
rs-genai = { path = "../rs-genai" }
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dashmap = "6"
parking_lot = "0.12"
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", optional = true }
metrics = { version = "0.24", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
gcs-artifacts = []
tracing-support = ["dep:tracing", "rs-genai/tracing-support"]
metrics = ["dep:metrics"]
database-sessions = []
