[package]
name = "rs-genai"
version = "0.3.0"
edition.workspace = true
license.workspace = true
description = "Raw wire protocol and transport for the Gemini Multimodal Live API"
keywords = ["gemini", "multimodal", "live", "audio", "realtime"]
categories = ["api-bindings", "multimedia::audio", "network-programming"]
repository.workspace = true
documentation = "https://docs.rs/rs-genai"
readme = "README.md"

[features]
default = ["live", "vad", "tracing-support"]
live = []
vad = []
opus = ["dep:audiopus"]
http = ["dep:reqwest"]
generate = ["http"]
embed = ["http"]
files = ["http"]
models = ["http"]
tokens = ["http"]
caches = ["http"]
tunings = ["http"]
batches = ["http"]
chats = ["generate"]
all-apis = ["generate", "embed", "files", "models", "tokens", "caches", "tunings", "batches", "chats"]
tracing-support = ["dep:tracing", "dep:tracing-subscriber"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
# OpenTelemetry feature hierarchy:
#   otel-base  — shared deps (opentelemetry, opentelemetry_sdk, tracing-opentelemetry)
#   otel-otlp  — generic OTLP exporter (grpc-tonic via opentelemetry-otlp)
#   otel-gcp   — Google Cloud-native exporters (Cloud Trace + Cloud Monitoring, ADC auth)
#   otel       — backwards-compatible alias for otel-otlp
otel-base = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:tracing-opentelemetry",
  "tracing-support",
]
otel-otlp = ["otel-base", "dep:opentelemetry-otlp"]
otel-gcp = ["otel-base", "dep:opentelemetry-gcloud-trace", "dep:opentelemetry_gcloud_monitoring_exporter"]
otel = ["otel-otlp"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Async trait
async-trait = "0.1"

# Error handling
thiserror = "2"

# Identifiers
uuid = { version = "1", features = ["v4"] }

# Byte manipulation
bytes = "1"
bytemuck = { version = "1", features = ["derive"] }

# Concurrency
parking_lot = "0.12"
dashmap = "6"
arc-swap = "1"

# URL parsing
url = "2"

# HTTP client (optional, for REST APIs)
reqwest = { version = "0.12", features = ["json"], optional = true }

# Audio (optional)
audiopus = { version = "0.3.0-rc.0", optional = true }

# Tracing (optional)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }

# Metrics (optional)
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }

# OpenTelemetry — shared (otel-base)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

# OpenTelemetry — generic OTLP exporter (otel-otlp)
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "metrics"], optional = true }

# OpenTelemetry — Google Cloud-native exporters (otel-gcp)
opentelemetry-gcloud-trace = { version = "0.22", optional = true }
opentelemetry_gcloud_monitoring_exporter = { version = "0.22", features = ["tokio"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tokio-test = "0.4"

[[bench]]
name = "audio_pipeline"
harness = false

[lints]
workspace = true
