[package]
name = "example-cookbook"
version = "0.1.0"
edition.workspace = true
publish = false

# ── Crawl (01–10): Foundations ──────────────────────────────────────────────
[[bin]]
name = "01-simple-agent"
path = "src/01_simple_agent.rs"

[[bin]]
name = "02-agent-with-tools"
path = "src/02_agent_with_tools.rs"

[[bin]]
name = "03-callbacks"
path = "src/03_callbacks.rs"

[[bin]]
name = "04-sequential-pipeline"
path = "src/04_sequential_pipeline.rs"

[[bin]]
name = "05-parallel-fanout"
path = "src/05_parallel_fanout.rs"

[[bin]]
name = "06-loop-agent"
path = "src/06_loop_agent.rs"

[[bin]]
name = "07-state-transforms"
path = "src/07_state_transforms.rs"

[[bin]]
name = "08-prompt-composition"
path = "src/08_prompt_composition.rs"

[[bin]]
name = "09-tool-composition"
path = "src/09_tool_composition.rs"

[[bin]]
name = "10-guards"
path = "src/10_guards.rs"

# ── Walk (11–20): Multi-Agent Patterns ──────────────────────────────────────
[[bin]]
name = "11-route-branching"
path = "src/11_route_branching.rs"

[[bin]]
name = "12-fallback-chain"
path = "src/12_fallback_chain.rs"

[[bin]]
name = "13-review-loop"
path = "src/13_review_loop.rs"

[[bin]]
name = "14-map-over"
path = "src/14_map_over.rs"

[[bin]]
name = "15-middleware-stack"
path = "src/15_middleware_stack.rs"

[[bin]]
name = "16-context-engineering"
path = "src/16_context_engineering.rs"

[[bin]]
name = "17-evaluation-suite"
path = "src/17_evaluation_suite.rs"

[[bin]]
name = "18-artifacts"
path = "src/18_artifacts.rs"

[[bin]]
name = "19-agent-tool"
path = "src/19_agent_tool.rs"

[[bin]]
name = "20-supervised"
path = "src/20_supervised.rs"

# ── Run (21–30): Production Patterns ────────────────────────────────────────
[[bin]]
name = "21-full-algebra"
path = "src/21_full_algebra.rs"

[[bin]]
name = "22-contract-testing"
path = "src/22_contract_testing.rs"

[[bin]]
name = "23-deep-research"
path = "src/23_deep_research.rs"

[[bin]]
name = "24-customer-support"
path = "src/24_customer_support.rs"

[[bin]]
name = "25-code-review"
path = "src/25_code_review.rs"

[[bin]]
name = "26-dispatch-join"
path = "src/26_dispatch_join.rs"

[[bin]]
name = "27-race-timeout"
path = "src/27_race_timeout.rs"

[[bin]]
name = "28-a2a-remote"
path = "src/28_a2a_remote.rs"

[[bin]]
name = "29-live-voice"
path = "src/29_live_voice.rs"

[[bin]]
name = "30-production-pipeline"
path = "src/30_production_pipeline.rs"

[dependencies]
gemini-adk-fluent-rs = { workspace = true }
gemini-adk-rs        = { workspace = true }
gemini-genai-rs       = { workspace = true }
tokio         = { version = "1", features = ["full"] }
async-trait   = "0.1"
schemars      = "0.8"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"

[lints]
workspace = true
