[package]
name = "example-tool-calling"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
rs-genai = { workspace = true }
rs-adk = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
dotenvy = "0.15"
base64 = "0.22"

[lints]
workspace = true
