[package]
name = "adk-cli"
version = "0.3.0"
edition.workspace = true

[dependencies]
rs-genai = { path = "../../crates/rs-genai" }
rs-adk = { path = "../../crates/rs-adk", features = ["gemini-llm"] }
adk-rs-fluent = { path = "../../crates/adk-rs-fluent", features = ["gemini-llm"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
toml = "0.8"

[[bin]]
name = "adk"
path = "src/main.rs"
